# python-typed-dotenv

./: .deliverit.yaml  .gitignore  .travis.yml  CHANGELOG.md  README.md  pyproject.toml
tests/: .env  json.env  python_literal.env  test_typed_env.py  toml.env  yaml_1_2.env
typed_dotenv/: __init__.py
