[tool.poetry]
name = "typed_dotenv"
version = "0.1.0"
description = "Handle .env files with types"
authors = ["Ewen Le Bihan <hey@ewen.works>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
python-dotenv = "^0.14.0"
"ruamel.yaml" = { version = "^0.16.10", optional = true }
pydantic = { version = "^1.6.1", optional = true }
toml = {version = "^0.10.1", optional = true }
parse = "^1.16.0"

[tool.poetry.extras]
yaml = ["ruamel.yaml"]
pydantic = ["pydantic"]
toml = ["toml"]
all = ["ruamel.yaml", "pydantic", "toml"]

[tool.poetry.dev-dependencies]
pytest = "^6.0.0"
black = "^19.10b0"
pylint = "^2.5.3"
pytest-cov = "^2.10.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
